# projektveckor-portal

./: .env.example.dev  .env.example.prod  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  Dockerfile  README.md  compose.dev.yaml  compose.prod.yaml  pyproject.toml
.agent/: handoff.md  long-term-memory.md  next-session-instruction-prompt-template.md  readme-first.md
.agent/.codex/skills/: README.md
.agent/rules/: 000-rule-index.md  010-foundational-principles.md  050-python-standards.md  060-docker-and-compose.md  080-home-server-deployment.md  090-documentation-standards.md  200-frontend-vue-vite.md
.agent/sessions/: README.md
.agents/: handoff.md  next-session-instruction-prompt-template.md  readme-first.md
.agents/.codex/skills/: README.md
.agents/rules/: 000-rule-index.md  050-python-standards.md  060-docker-and-compose.md  080-home-server-deployment.md  090-documentation-standards.md
.agents/sessions/: README.md
.agents/skills/hooks/: SKILL.md
.agents/skills/projektveckor-docs-as-code/: SKILL.md
.agents/skills/projektveckor-hemma-deploy/: SKILL.md
.agents/skills/projektveckor-portal-week-entry/: SKILL.md
.agents/skills/projektveckor-ssh-hemma-windows-wsl/: SKILL.md
docs/: docs-structure-spec.md  index.md
docs/_meta/: README.md  docs-contract.yaml
docs/backlog/: README-index.md  README.md  current.md
docs/backlog/epics/: epic-auth-integration.md  epic-doc-as-code-governance.md  epic-doc-guards-and-precommit.md  epic-fn-rollspel-v43-portal-mvp.md  epic-self-hosted-doc-library-and-conversion.md
docs/backlog/programmes/: programme-projektveckor-portal-v0-1.md
docs/backlog/stories/: story-auth-mvp.md  story-doc-as-code-mvp.md  story-doc-library-preview-edit-convert.md  story-port-doc-guards.md
docs/backlog/tasks/: task-01-port-doc-as-code-system.md  task-02-pyproject-toml-for-pdm-scripts.md  task-03-backlog-index-kontraktsformat.md  task-04-frontend-ts-force-consistent-casing.md  task-05-doc-guard-link-integrity.md  task-06-doc-guard-allowlist-and-legacy.md  task-07-pre-commit-quality-gate.md  task-08-doc-library-url-and-storage.md  task-09-backend-doc-preview-api.md  task-10-sir-convert-a-lot-adapter.md  task-11-frontend-doc-preview.md  task-12-admin-doc-editor.md  task-13-auth-discovery-and-adr.md  task-14-backend-auth-port-and-middleware.md  task-15-frontend-login-flow.md  task-16-pvp-auto-rerun-on-idempotent-failed-replays-sir-convert-a-lot-v2.md  task-17-inf-r-tunn-agents-md-router-till-skills.md
docs/decisions/: 0001-doc-as-code-governance.md  0002-self-hosted-documents-and-conversion.md  0003-auth-integration-huleedu-skriptoteket.md
docs/prd/: prd-projektveckor-portal-v0.1.md
docs/reference/: ref-dishka-migration-plan.md  ref-doc-as-code-quickstart.md  ref-sir-convert-a-lot-integration.md  ref-synk-port-plan-docs-skills.md  ref-synkplan-skriptoteket-huleedu-docforge.md
docs/runbooks/: runbook-hemma-deploy.md  runbook-ssh-hemma-windows-wsl.md
docs/templates/: template-adr.md  template-prd.md  template-reference.md  template-review.md  template-runbook.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: main.ts  router.ts
frontend/src/api/: client.ts
frontend/src/assets/: main.css
frontend/src/pages/: FnRollspelV43Page.vue  ForbiddenPage.vue  HomePage.vue  LoginPage.vue  NotFoundPage.vue
frontend/src/stores/: auth.ts
scripts/: __init__.py
scripts/docs_as_code/: __init__.py  common.py  index_tasks.py  new_doc.py  new_rule.py  new_task.py  task_templates.py  validate_docs.py  validate_skill_frontmatter.py  validate_tasks.py
scripts/docs_as_code/tests/: conftest.py  test_validate_skill_frontmatter.py
scripts/maintenance/: __init__.py  fix_frontmatter_duplicate_h1.py  markdown_quality.py  normalize_emphasis_markers.py
src/projektveckor_portal/: app.py  settings.py
src/projektveckor_portal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/projektveckor_portal/application/: documents_service.py  exports_service.py
tests/: test_exports_service_failed_export_retry.py  test_sir_convert_a_lot_v2_client_retry.py
(+27 files in other folders)
